--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		padding: 15em 0;
 		height: 100%;
 		font-size: 1em;
 		background: #2f3c4d;
@@ -139,7 +140,8 @@ button:hover {
 
 @media (max-width: 720px) {
 		body {
-				background-image: none;
+			padding: 0;
+			background-image: none;
 		}
 
 		.wrapper {
